--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="soc-linkedin" href="https://ca.linkedin.com/in/jason-qian-71609910a" target="_blank">
+						<a class="soc-linkedin" href="https://ca.linkedin.com/in/jasonqian95" target="_blank">
 							<img src="images/linkedin.png" alt="My Linkedin" width="150" height="50" border="0">
 						</a>
 					</li>
@@ -74,16 +74,16 @@
 					<li>
 						<a href="Resume.pdf" title="Resume/CV" target="_blank">My Resume</a>
 					</li>
-					<li><a href="https://ca.linkedin.com/in/jason-qian-71609910a" target="_blank">LinkedIn</a>
+					<li><a href="https://ca.linkedin.com/in/jasonqian95" target="_blank">LinkedIn</a>
 					</li>
 				</ul>
 
 			<h3>Code Sample</h3>
 				<ul>
 					<li>
-						<APPLET ARCHIVE="2048.jar" CODE="Game.class" WIDTH=400 HEIGHT=200>
+						<applet archive="2048.jar" code="Game.class" width=800 height=600>
 							Work in progress: applet not showing up ) :
-						</APPLET>
+						</applet>
 					</li>
 				</ul>
 		</section>
