--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<script src="scripts.js"></script>
+	<script src="//www.java.com/js/deployJava.js"></script>
 	<head>
 		<title>Jason Qian - a continous work in progress</title>
 		<link rel="stylesheet" media="all" href="style.css"/>
@@ -84,6 +85,16 @@
 						<applet archive="2048.jar" code="Game.class" width=800 height=600>
 							Work in progress: applet not showing up ) :
 						</applet>
+						<script>
+    						var attributes = {codebase: 'http://my.url/my/path/to/codebase',
+                      			code: 'game.class',
+                      			archive: '2048.jar',
+                      			width: '800', 
+                      			height: '600'};
+   							 var parameters = {java_arguments: '-Xmx256m'}; // customize per your needs
+    						var version = '1.5'; // JDK version
+    						deployJava.runApplet(attributes, parameters, version);
+						</script>
 					</li>
 				</ul>
 		</section>
